# SignApp-Trainer

./: .gitignore  README.md  config.ini  main.py  plot.py  pyproject.toml  requirements.in  requirements.txt  train.py
lib/: plot.py  train.py  util.py
scripts/: build-ui.sh
ui/: camerawindow.py  camerawindow.ui  graphwindow.py  graphwindow.ui  mainwindow.py  mainwindow.ui  trainwindow.py  trainwindow.ui
widgets/: camerawindow.py  graphwindow.py  loadingscreen.py  mainwindow.py  trainwindow.py
