[tool.poetry]
name = "signapp"
version = "0.1.0"
description = ""
authors = ["Nick Tenebruso <nickten2006@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyinstaller = "^6.2.0"
pyqt5 = "^5.15.10"
mediapipe = "^0.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
